--- a/liquid-glass-example/package.json
+++ b/liquid-glass-example/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "liquid-glass-react": "^1.0.2",
+    "liquid-glass-react": "file:..",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "react": "^19.0.0",
